--- a/css/styles.css
+++ b/css/styles.css
@@ -42,14 +42,6 @@ header {
     max-width: 496px
 }
 
-.section-team {
-    background-color: #F4F4FD;
-    width: 1440px;
-    height: 732px;
-    flex-shrink: 0;
-    padding: 120px 0 120px
-}
-
 .section-title {
 color: #2E2F42;
 text-align: center;
@@ -69,7 +61,6 @@ font-size: 20px;
 font-weight: 500;
 line-height: 24px; /* 120% */
 letter-spacing: 0.4px;
-margin-top: 24px;
 }
 
 .under-section-text {
@@ -130,7 +121,7 @@ ul {
 .page-header .container {
     display: flex;
     align-items: center;
-    padding: 24px 0 24px
+    padding: 24px 0 24px;
 }
 
 .nav-list {
@@ -163,7 +154,7 @@ background: #2E2F42;
 width: 1440px;
 height: 600px;
 flex-shrink: 0;
-padding: 188px 0 188px
+padding: 188px 0 188px;
 }
 
 .button {
@@ -193,20 +184,6 @@ min-width: 169px;
     background-color: #FFFFFF;
 }
 
-.down-page {
-    background-color: #2e2f42;
-}
-
-.down-section-text {
-    color: #F4F4FD;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
-.logo-light {
-    color: #F4F4FD;
-}
-
 h1,h2,h3 {
     margin: 0;
 }
@@ -231,23 +208,6 @@ p {
     text-align: left;
 }
 
-.team-list .team {
-    list-style-type: none; 
-    background-color: #FFFFFF;
-}
-
-.portfolio-list {
-    list-style-type: none; 
-}
-
-
-
-.container .team-list {
-    display: flex;
-    gap: 24px;
-    justify-content: center;
-}
-
 .section-perevag .container {
     justify-content: center;
 }
@@ -256,16 +216,47 @@ p {
     padding: 120px 0 120px
 }
 
-.team {
-    display: inline-flex;
-padding-bottom: 32px;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 8px;
-border-radius: 0px 0px 4px 4px;
-background: v#FFF;
-box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+/*Третя секція, КОМАНДА*/
+
+
+.section-team {
+    background-color: #F4F4FD;
+    width: 1440px;
+    height: 732px;
+    flex-shrink: 0;
+    padding: 120px 0 120px;
+}
+
+.container .team-list {
+    display: flex;
+    gap: 24px;
+}
+
+.team-list .team {
+    list-style-type: none; 
+    background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team1 {
+    padding: 32px 0;
+}
+
+.team1 h3 {
+    text-align: center;
+    margin-bottom: 8px;
+}
+.team1 p {
+    text-align: center;
+}
+
+
+/*Четверта секція, ПОРТФОЛІО*/
+
+
+.portfolio-list {
+    list-style-type: none; 
 }
 
 .section-portfolio .container {
@@ -291,34 +282,49 @@ align-items: flex-start;
 flex-shrink: 0;
 }
 
+.port-setvice .under-section-text {
+    margin-bottom: 32px;
+    margin-left: 16px;
+}
+
 .port-setvice .under-section-title {
     margin-top: 32px;
     margin-bottom: 8px;
     margin-left: 16px;
 }
 
-.down-page .container {
-    display: flex;
-    flex-direction: column;
-    margin-top: 120px;
-}
 
-.port-setvice .under-section-text {
-    margin-bottom: 32px;
-    margin-left: 16px;
-}
-
-.container .down-section-text {
-    width: 264px;
-    margin-top: 16px;
-}
+/*ФУТЕР*/
+                                                        
 
 .down-page {
+    background-color: #2e2f42;
+    padding: 100px 0;
     width: 1440px;
     height: 312px;
     flex-shrink: 0;
 }
 
+.down-page .container {
+    display: inline-block;
+    margin-left: 156px;
+}
+
 .down-page .container .logo {
-    margin-top: 101.5px;
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.down-section-text {
+    color: #F4F4FD;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.container .down-section-text {
+    max-width: 264px;
+}
+
+.logo-light {
+    color: #F4F4FD;
 }
