--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,8 @@ header {
 
 .container {
     max-width: 1158px;
-    padding: 0 15px 0 15px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 .main-title {
@@ -65,10 +65,9 @@ letter-spacing: 0.4px;
 
 .under-section-text {
     color: #434455;
-text-align: center;
-font-weight: 400;
-line-height: 24px; /* 150% */
-letter-spacing: 0.32px;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.32px;
 }
 
 .logo {
@@ -255,42 +254,44 @@ p {
 /*Четверта секція, ПОРТФОЛІО*/
 
 
+.portfolio {
+    padding-top: 120px; 
+    padding-bottom: 120px;
+}
+
 .portfolio-list {
     list-style-type: none; 
 }
 
-.section-portfolio .container {
-    justify-content: center;
-}
+
 
 .container .portfolio-list {
     display: flex;
     gap: 24px;
     justify-content: center;
     flex-wrap: wrap;
+    row-gap: 48px;
 }
 
-.port-setvice {
-    border: 1px solid #E7E9FC;
-background: #FFF;
-display: flex;
-width: 360px;
-height: 420px;
-padding-bottom: 32px;
-flex-direction: column;
-align-items: flex-start;
-flex-shrink: 0;
+.port-service {
+    background: #FFF;
+    display: flex;
+    width: 360px;
+    height: 420px;
+    padding-bottom: 32px;
+    flex-direction: column;
+    align-items: stretch;
+    flex-shrink: 0;
 }
 
-.port-setvice .under-section-text {
-    margin-bottom: 32px;
-    margin-left: 16px;
+.port-service1 {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
-.port-setvice .under-section-title {
-    margin-top: 32px;
+.port-service1 h3 {
     margin-bottom: 8px;
-    margin-left: 16px;
 }
 
 
