--- a/css/styles.css
+++ b/css/styles.css
@@ -120,27 +120,34 @@ ul {
 .page-header .container {
     display: flex;
     align-items: center;
-    padding: 24px 0 24px;
+    
 }
 
 .nav-list {
     list-style-type: none;
     display: flex;
     gap: 40px;
+    align-items: center;
 }
 
 .nav-contacts {
     display: flex;
     gap: 40px;
+    align-items: center;
 }
 
 .container .navigation {
     display: flex;
+    align-items: center;
+    padding: 0 15px;
+    padding: 24px 0 24px;
 }
 
 .container .nav-list {
     max-width: 261px;
     margin-right: 332px;
+    align-items: center;
+    padding: 0 15px;
 }
 
 .contacts {
@@ -169,6 +176,9 @@ border-radius: 4px;
 background-color:#4D5AE5;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 min-width: 169px;
+display: block;
+height: 56px;
+border: none;
 }
 
 .button:hover {
@@ -329,3 +339,17 @@ p {
 .logo-light {
     color: #F4F4FD;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
