--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,6 @@ ul {
 .container .navigation {
     display: flex;
     align-items: center;
-    padding: 0 15px;
     padding: 24px 0 24px;
 }
 
@@ -147,7 +146,6 @@ ul {
     max-width: 261px;
     margin-right: 332px;
     align-items: center;
-    padding: 0 15px;
 }
 
 .contacts {
@@ -176,9 +174,12 @@ border-radius: 4px;
 background-color:#4D5AE5;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 min-width: 169px;
-display: block;
 height: 56px;
 border: none;
+}
+
+.container .button {
+    display: block;
 }
 
 .button:hover {
@@ -201,6 +202,18 @@ p {
     margin: 0;
 }
 
+
+/*Друга секція, ПЕРЕВАГИ*/
+
+
+.section-perevag {
+    padding: 120px 0 120px
+}
+
+.section-perevag .container {
+    justify-content: center;
+}
+
 .perevagu-list {
     list-style-type: none;
     display: flex;
@@ -209,20 +222,16 @@ p {
     flex-shrink: 0;
 }
 
+.perevag-element {
+    width: calc((100% - 72px) / 4);
+}
+
 .perevagu-list .under-section-title {
     margin-bottom: 8px;
 }
 
 .perevagu-list .under-section-text {
     text-align: left;
-}
-
-.section-perevag .container {
-    justify-content: center;
-}
-
-.section-perevag {
-    padding: 120px 0 120px
 }
 
 
@@ -248,15 +257,15 @@ p {
     border-radius: 0px 0px 4px 4px;
 }
 
-.team1 {
+.team-element {
     padding: 32px 0;
 }
 
-.team1 h3 {
+.team-element h3 {
     text-align: center;
     margin-bottom: 8px;
 }
-.team1 p {
+.team-element p {
     text-align: center;
 }
 
