--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ header {
 .container {
     max-width: 1158px;
     margin: 0 auto;
-    padding: 0 15px;
 }
 
 .main-title {
@@ -92,6 +91,8 @@ font-weight: 500;
 line-height: 24px; /* 150% */
 letter-spacing: 0.32px;
 text-decoration: none;
+padding: 24px 0 24px;
+align-items: center;
 }
 
 .contacts ul a {
@@ -128,6 +129,7 @@ ul {
     display: flex;
     gap: 40px;
     align-items: center;
+    padding: 0 15px;
 }
 
 .nav-contacts {
@@ -223,7 +225,7 @@ p {
 }
 
 .perevag-element {
-    width: calc((100% - 72px) / 4);
+    width; calc((100% - 3 * 24px) / 4);
 }
 
 .perevagu-list .under-section-title {
@@ -282,8 +284,6 @@ p {
     list-style-type: none; 
 }
 
-
-
 .container .portfolio-list {
     display: flex;
     gap: 24px;
@@ -303,13 +303,13 @@ p {
     flex-shrink: 0;
 }
 
-.port-service1 {
+.port-service-element {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
 
-.port-service1 h3 {
+.port-service-element h3 {
     margin-bottom: 8px;
 }
 
