--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ header {
     border-bottom: 1px solid #E7E9FC;
     background: #FFF;
     width: 1440px;
-    height: 72px;
 }
 
 .container {
@@ -88,17 +87,14 @@ color: #2e2f42;
 .nav-list .link {
 color: #2E2F42;
 font-weight: 500;
-line-height: 24px; /* 150% */
 letter-spacing: 0.32px;
 text-decoration: none;
-padding: 24px 0 24px;
 align-items: center;
 }
 
 .contacts ul a {
 color: #434455;
 font-weight: 400;
-line-height: 24px; /* 150% */
 letter-spacing: 0.32px;
 text-decoration: none;
 }
@@ -141,7 +137,7 @@ ul {
 .container .navigation {
     display: flex;
     align-items: center;
-    padding: 24px 0 24px;
+    padding: 24px 0;
 }
 
 .container .nav-list {
