--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ header {
 .container {
     max-width: 1158px;
     margin: 0 auto;
+    padding: 0 15px 0 15px;
 }
 
 .main-title {
@@ -205,6 +206,7 @@ p {
 
 
 .section-perevag {
+    width: 1440px;
     padding: 120px 0 120px
 }
 
@@ -272,6 +274,7 @@ p {
 
 
 .portfolio {
+    width: 1440px;
     padding-top: 120px; 
     padding-bottom: 120px;
 }
@@ -291,12 +294,12 @@ p {
 .port-service {
     background: #FFF;
     display: flex;
-    width: 360px;
     height: 420px;
     padding-bottom: 32px;
     flex-direction: column;
     align-items: stretch;
     flex-shrink: 0;
+    width: calc((100% - 48px) / 3);
 }
 
 .port-service-element {
