--- a/css/styles.css
+++ b/css/styles.css
@@ -138,13 +138,13 @@ ul {
 .container .navigation {
     display: flex;
     align-items: center;
-    padding: 24px 0;
 }
 
 .container .nav-list {
     max-width: 261px;
     margin-right: 332px;
     align-items: center;
+    padding: 24px 0;
 }
 
 .contacts {
@@ -223,7 +223,7 @@ p {
 }
 
 .perevag-element {
-    width; calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 3 * 24px) / 4);
 }
 
 .perevagu-list .under-section-title {
